<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:gravity="center"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="54dip" android:layout_alignParentBottom="true"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="horizontal" android:id="@+id/ll_menu"
		android:background="@drawable/menu_bg" android:padding="2.0dip"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:orientation="vertical" android:id="@+id/ll_index"
			android:clickable="true" android:layout_width="0.0dip"
			android:padding="2.0dip" android:background="@anim/menu_selected_bg"
			android:layout_height="wrap_content" android:layout_weight="0.2">
			<ImageView android:layout_gravity="center_horizontal"
				android:id="@+id/igw_index" android:layout_width="wrap_content"
				android:layout_height="27.0dip" android:src="@drawable/menu_home_normal"
				android:layout_centerVertical="true" />
			<TextView android:textSize="14.0sp" android:textColor="@color/white"
				android:layout_marginTop="1dip" android:gravity="center_horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/menu_txt_index" />
		</LinearLayout>
		<LinearLayout android:orientation="vertical" android:id="@+id/ll_search"
			android:padding="2.0dip" android:clickable="true"
			android:layout_width="0.0dip" android:background="@anim/menu_selected_bg"
			android:layout_height="wrap_content" android:layout_weight="0.2">
			<ImageView android:layout_gravity="center_horizontal"
				android:id="@+id/igw_search" android:layout_width="wrap_content"
				android:layout_height="27.0dip" android:src="@drawable/menu_search_normal"
				android:layout_centerVertical="true" />
			<TextView android:textSize="14.0sp" android:textColor="@color/white"
				android:layout_marginTop="1dip" android:gravity="center_horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/menu_txt_search" />
		</LinearLayout>
		<LinearLayout android:orientation="vertical" android:id="@+id/ll_userarea"
			android:padding="2.0dip" android:clickable="true"
			android:layout_width="0.0dip" android:background="@anim/menu_selected_bg"
			android:layout_height="wrap_content" android:layout_weight="0.2">
			<ImageView android:layout_gravity="center_horizontal"
				android:id="@+id/igw_userarea" android:layout_width="wrap_content"
				android:layout_height="27.0dip" android:src="@drawable/menu_shopcar_normal"
				android:layout_centerVertical="true" />
			<TextView android:textSize="14.0sp" android:textColor="@color/white"
				android:layout_marginTop="1dip" android:gravity="center_horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/menu_txt_userarea" />
		</LinearLayout>
		<LinearLayout android:orientation="vertical" android:id="@+id/ll_more"
			android:padding="2.0dip" android:background="@anim/menu_selected_bg"
			android:clickable="true" android:layout_width="0.0dip"
			android:layout_height="wrap_content" android:layout_weight="0.2">
			<ImageView android:layout_gravity="center_horizontal"
				android:id="@+id/igw_more" android:layout_width="wrap_content"
				android:layout_height="27.0dip" android:src="@drawable/menu_more_normal"
				android:layout_centerVertical="true" />
			<TextView android:textSize="14.0sp" android:textColor="@color/white"
				android:layout_marginTop="1dip" android:gravity="center_horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/menu_txt_more" />
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>